# ZephyrProjects

app_h723_eth/: CMakeLists.txt  README.md  prj.conf
app_h723_eth/boards/nucleo_h723zg/: nucleo_h723zg.overlay
app_h723_eth/src/: led_service.c  led_service.h  main.c  web_server.c  web_server.h
app_h723_ethusb/: CMakeLists.txt  README.md  net_init.sh  prj-eth.conf  prj-rndis.conf  prj-usb-cdc.conf  prj-usb.conf  prj.conf  usb.overlay
app_h723_ethusb/src/: main.c  usb_service.c  usb_service.h  web_resources.h  web_server.c  web_server.h
